Bug 349860. Magnifier doesn't follow input or caret navigation. r=evan.yan